--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
